--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "lois",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1"
   }
