feat:前后端 部署服务器后调通，数据库可用，可以进一步开发啦，开心！！

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "scripts": {},
+  "scripts": {
+    "prod": "NODE_ENV=production node server.js"
+  },
   "author": "lois",
   "license": "ISC",
   "dependencies": {
